--- a/document/literature.bib
+++ b/document/literature.bib
@@ -194,3 +194,23 @@
   year      = {2010},
   isbn      = {978-1-449-38156-1}
 } 
+
+@online{rancher,
+  author  = {SUSE},
+  title   = {A Buyer’s Guide to Enterprise Kubernetes Management Platforms},
+  year    = 2022,
+  url     = {https://www.rancher.com/assets/pdf/Buyers_Guide__SUSE_Rancher.pdf},
+  urldate = {2024-12-10}
+}
+
+@INPROCEEDINGS{8632383,
+  author={Sanchez, Susan M.},
+  booktitle={2018 Winter Simulation Conference (WSC)}, 
+  title={DATA FARMING: BETTER DATA, NOT JUST BIG DATA}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={425-439},
+  keywords={Big Data;Data models;Data mining;Correlation;Tools;Analytical models;Computational modeling},
+  doi={10.1109/WSC.2018.8632383}}
+
