--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -735,8 +735,18 @@ implementiert wird, dass Faktoren sich auf der Zeitachse des Simulaionslaufs dyn
 Zum Beispiel ist es in einem realen Szenario sehr wahrscheinlich, dass Instandhaltungskapazitäten
 sich im Laufe der Zeit verändern und nicht so bleiben, wie zu Beginn der Simulationszeit konfiguriert.
 
-% Generell Zukunft von Kubernetes
-% Speicherverwaltung über mehrere Nodes hinweg
+Abschließend bleibt festzuhalten, dass es sich bei Kubernetes zum Zeitpunkt des Erstellens dieser
+Arbeit keineswegs um eine sich entwickelnde Technologie handelt, sondern um eine, die bereits
+in vielen Bereichen von Forschung und Wirtschaft etabliert ist. In einer Umfrage der 
+Cloud Native Computing Foundation von 2024 \cite{cncf} gaben 41\% der befragten Unternehmen an,
+bereits jetzt die meisten oder alle ihrer Anwendungen in einem Cloud-Umfeld zu betreiben und
+80\% gaben an, in den nächsten fünf Jahren die meisten oder alle ihrer neu entwickelten Anwendungen
+auf der Cloud betreiben zu wollen. Durch den wachsenden Nutzerkreis wird auch mit Weiterentwicklungen
+von Kubernetes in Bereichen der Bedienbarkeit und Standardisierung gerechnet \cite{emerging_trends}.
+Erstere ist von großer Bedeutung, um Kubernetes einem größeren Feld an Entwicklern zugänglich
+zu machen, während letztes einen wesentlichen Beitrag zur Flexibilität und Interoperabilität
+leisten kann.
+
 \section{Anhang}
 
 
