--- a/document/literature.bib
+++ b/document/literature.bib
@@ -214,3 +214,21 @@
   keywords={Big Data;Data models;Data mining;Correlation;Tools;Analytical models;Computational modeling},
   doi={10.1109/WSC.2018.8632383}}
 
+@online{cncf,
+  author  = {Thakkar, Rajiv},
+  title   = {The voice of Kubernetes experts report 2024: the data trends driving the future of the enterprise},
+  year    = 2024,
+  url     = {https://www.cncf.io/blog/2024/06/06/the-voice-of-kubernetes-experts-report-2024-the-data-trends-driving-the-future-of-the-enterprise/},
+  urldate = {2024-12-10}
+}
+
+@online{emerging_trends,
+  author  = {James, Kay},
+  title   = {Emerging Trends in Microservices and Kubernetes},
+  year    = 2024,
+  url     = {https://www.getambassador.io/blog/emerging-trends-microservices-kubernetes},
+  urldate = {2024-12-10}
+}
+
+
+
