--- a/document/literature.bib
+++ b/document/literature.bib
@@ -230,5 +230,13 @@
   urldate = {2024-12-10}
 }
 
+@online{minikube,
+  author  = {The Kubernetes Authors},
+  title   = {minikube},
+  year    = 2024,
+  url     = {https://minikube.sigs.k8s.io/docs/},
+  urldate = {2024-12-12}
+}
+
 
 
