Kapitel Titel angepasst

--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -489,7 +489,7 @@ Bei Modellen für realistische Szenarien ist natürlich von mehr Faktoren und au
 für einzelne Simulationsläufe auszugehen. Um einen vollständigen Simulationslauf möglichst schnell abzuschließen
 und folglich auswertbare Ergebnisse zu erhalten, bietet es sich an, die Rechenlast zu verteilen.  
 
-\subsection{Schritte zum Aufsetzen und zum Betrieb}
+\subsection{Die Microservice-Architektur}
 Nachdem im vorangegangenen Abschnitt die Motivation und die Funktionsprinzipien der Simulation erklärt wurden,
 soll in diesem Abschnitt auf die für den Betrieb genutzte Microservice-Architektur Bezug genommen werden.
 
