--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -1,6 +1,8 @@
 % TODO: UML Diagramm zu den Klassen in der Simulation?
 % TODO: Gendern?
 % TODO: README.md schreiben (Sollte Details zu DNS config enthalten)
+% Zusammenfassung schreiben
+% Deckblatt erstellen
 \documentclass[11pt,a4paper]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
