--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -71,7 +71,7 @@ an sich und der zu erwartenden Entwicklung von Kubernetes im Allgemeinen in den 
 
 \section{Einleitung}
 \label{sec:einleitung}
-Die vorliegende Arbeit soll einen Überblick über das Container-Orchestrierungs-Tool \emph{Kubernetes} geben. 
+Die vorliegende Arbeit soll einen Überblick über das Container-\linebreak Orchestrierungs-Tool \emph{Kubernetes} geben. 
 Dazu werden zunächst Historie und grundlegende Funktionsprinzipien von Kubernetes beschrieben, die anschließend
 anhand einer beispielhaften Anwendung aus dem Bereich verteilter, agentenbasierter Simulationen demonstriert werden.
 
