Abschnitt KI Anwendung eingefügt

--- a/document/Kubernetes.tex
+++ b/document/Kubernetes.tex
@@ -779,7 +779,14 @@ zu machen, während letztes einen wesentlichen Beitrag zur Flexibilität und Int
 leisten kann.
 
 \section{Anhang}
-
+\subsection{Nutzung von generativer KI}
+Zur Erstellung dieser Arbeit wurde generative künstliche Intelligenz\linebreak (ChatGPT und GitHub Copilot) in folgendem Umfang verwendet:
+\begin{itemize}
+	\item Suchen von Literatur
+	\item Prüfung der Arbeit auf Rechtschreib- und Grammatikfehler
+	\item Entwurf einer Gliederung (die nur unwesentlich übernommen wurde)
+	\item Erstellung und Debugging von Code und Kubernetes-Skripten
+\end{itemize}
 
 % \bibliographystyle{babplain-fl}
 % \bibliography{literature}
